# BBRL

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  changes.txt  clean_cmake_cache  index.html  test
_site/: _agent_8h.html  _agent_exception_8cpp.html  _agent_exception_8cpp_source.html  _agent_exception_8h.html  _agent_exception_8h_source.html  _agent_factory_8cpp.html  _agent_factory_8h.html  _agent_factory_8h_source.html  _agent_factory_exception_8h.html  _agent_factory_exception_8h_source.html  _b_a_m_c_p_agent_8cpp.html  _b_a_m_c_p_agent_8cpp_source.html  _b_e_b_agent_8h_source.html  _c_model_8cpp.html  _c_model_8h_source.html  _chrono_8cpp.html  _chrono_8cpp_source.html  _chrono_8h_source.html  _constant_8h.html  _d_d_s_2_external_libs_8h.html  _d_d_s_2_external_libs_8h_source.html  _dir_multi_distribution_8cpp_source.html  _dir_multi_distribution_8h_source.html  _e_greedy_agent_8cpp.html  _e_greedy_agent_8h.html  _e_greedy_agent_factory_8cpp_source.html  _experiment_8cpp.html  _experiment_8h.html  _experiment_exception_8cpp_source.html  _experiment_exception_8h.html  _f_d_m_transition_sampler_8cpp.html  _f_d_m_transition_sampler_8cpp_source.html  _f_d_m_transition_sampler_8h_source.html  _f_d_msampler_factory_8cpp_source.html  _f_d_msampler_factory_8h.html  _f_variable_8cpp_source.html  _f_variable_8h.html  _f_variable_8h_source.html  _f_variable_exception_8h.html  _f_variable_exception_8h_source.html  (+612 more)
api/: _agent_8cpp_source.html  _agent_factory_exception_8cpp_source.html  _b_f_s3_agent_8h_source.html  _chrono_8h.html  _constant_8h_source.html  _d_d_s_lib_8h_source.html  _dir_multi_distribution_8h.html  _e_greedy_agent_factory_8h.html  _experiment_8h_source.html  _f_variable_8cpp.html  _f_variable_exception_8cpp.html  _formula_8h.html  _formula_agent_8h.html  _formula_exception_8cpp_source.html  _formula_vector_8h_source.html  _i_m_d_p_2_external_libs_8h.html  _i_m_d_p_distribution_2_external_libs_8h.html  _i_m_d_p_distribution_8h_source.html  _lazy_m_d_p_sampler_8h_source.html  _lazy_sampler_factory_8cpp_source.html  _lazy_sampler_factory_8h_source.html  _m_d_p_8cpp_source.html  _m_d_p_8h.js  _m_d_p_distribution_8cpp.html  _m_d_p_distribution_8cpp_source.html  _m_d_p_distribution_exception_8cpp.html  _m_d_p_distribution_exception_8h.html  _m_d_p_exception_8cpp.html  _m_d_putils_8h_source.html  _o_p_p_s_d_s_agent_8cpp_source.html  _operators_8h_source.html  _optimal_agent_8h_source.html  _q_mean_8cpp.html  _q_mean_8h.html  _q_uniform_8h_source.html  (+181 more)
src/DDS/: CMakeLists.txt  DDSLib.h  ExternalLibs.h
src/DDS/src/: dds.cpp  dds.h
src/DDS/src/Agent/: Agent.cpp  Agent.h  BAMCPAgent.cpp  BAMCPAgent.h  BEBAgent.cpp  BEBAgent.h  BFS3Agent.cpp  BFS3Agent.h  EAgent.cpp  EAgent.h  EGreedyAgent.cpp  EGreedyAgent.h  FormulaAgent.cpp  FormulaAgent.h  OPPSCSAgent.cpp  OPPSCSAgent.h  OPPSDSAgent.cpp  OPPSDSAgent.h  OptimalAgent.cpp  OptimalAgent.h  RandomAgent.cpp  RandomAgent.h  SBOSSAgent.cpp  SBOSSAgent.h  SoftMaxAgent.cpp  SoftMaxAgent.h  VDBEEGreedyAgent.cpp  VDBEEGreedyAgent.h
src/DDS/src/Agent/FormulaAgent/: FVariable.cpp  FVariable.h  FVariableException.cpp  FVariableException.h  FVariableVector.cpp  FVariableVector.h  FormulaAgent.cpp  FormulaAgent.h  FormulaVector.cpp  FormulaVector.h  QCounterVar.cpp  QCounterVar.h  QMean.cpp  QMean.h  QSelf.cpp  QSelf.h  QUniform.cpp  QUniform.h  QVar.cpp  QVar.h
src/DDS/src/Agent/Guez/: MDPSimulator.h  PCSamplerFactory.cpp  PCSamplerFactory.h  PCTransitionSampler.cpp  PCTransitionSampler.h
src/DDS/src/Agent/Guez/envs/: banditSim.cpp  banditSim.h  basicMDP.cpp  basicMDP.h  lazyMDP.cpp  lazyMDP.h  simulator.cpp  simulator.h
src/DDS/src/Agent/Guez/planners/: MDPutils.cpp  MDPutils.h
src/DDS/src/Agent/Guez/planners/beb/: beb.cpp  beb.h
src/DDS/src/Agent/Guez/planners/boss/boss/: boss.cpp  boss.h
src/DDS/src/Agent/Guez/planners/boss/sboss/: sboss.cpp  sboss.h
src/DDS/src/Agent/Guez/planners/mcp/: statistic.h  value.h
src/DDS/src/Agent/Guez/planners/mcp/bamcp/: bamcp.cpp  bamcp.h  bauct.cpp  bauct.h  history.h  node.cpp  node.h
src/DDS/src/Agent/Guez/planners/mcp/bfs3/: bfs3.cpp  bfs3.h  node.cpp  node.h
src/DDS/src/Agent/Guez/samplers/: FDMTransitionSampler.cpp  FDMTransitionSampler.h  FDMsamplerFactory.cpp  FDMsamplerFactory.h  LazyMDPSampler.cpp  LazyMDPSampler.h  LazySamplerFactory.cpp  LazySamplerFactory.h  SFDMTransitionSampler.cpp  SFDMTransitionSampler.h  SFDMsamplerFactory.cpp  SFDMsamplerFactory.h  sampler.h  samplerFactory.h
src/DDS/src/Agent/Guez/utils/: anyoption.cpp  anyoption.h  guez_utils.cpp  guez_utils.h  hr_time.cpp  hr_time.h  memorypool.h  rng.cpp  rng.h  utils2.cpp  utils2.h
src/DDS/src/Agent/SLAgent/: ANNAgent.cpp  ANNAgent.h  SLAgent.cpp  SLAgent.h
src/DDS/src/AgentFactory/: AgentFactory.cpp  AgentFactory.h  AgentFactoryException.cpp  AgentFactoryException.h  EGreedyAgentFactory.cpp  EGreedyAgentFactory.h  FormulaAgentFactory.cpp  FormulaAgentFactory.h  SoftMaxAgentFactory.cpp  SoftMaxAgentFactory.h  VDBEEGreedyAgentFactory.cpp  VDBEEGreedyAgentFactory.h
src/DDS/src/AgentFactory/SLAgentFactory/: ANNAgentFactory.cpp  ANNAgentFactory.h  SLAgentFactory.cpp  SLAgentFactory.h
src/DDS/src/Experiment/: Experiment.cpp  Experiment.h
src/DDS/src/MDP/: CModel.cpp  CModel.h  MDP.cpp  MDP.h  Model.cpp  Model.h
src/DDS/src/MDPDistribution/: DirMultiDistribution.cpp  DirMultiDistribution.h  MDPDistribution.cpp  MDPDistribution.h
src/Utils/: CMakeLists.txt  ExternalLibs.h  UtilsLib.h
src/Utils/src/: Chrono.cpp  Chrono.h  RandomGen.cpp  RandomGen.h  Thread.cpp  Thread.h  ThreadException.cpp  ThreadException.h  UCB1.cpp  UCB1.h  UCT.cpp  UCT.h  utils.cpp  utils.h  utils.tpp
src/Utils/src/Algorithm/: StoSOO.cpp  StoSOO.h  UCB1.cpp  UCB1.h  UCT.cpp  UCT.h
src/Utils/src/Formula/: Constant.h  Formula.cpp  Formula.h  FormulaException.cpp  FormulaException.h  Operators.cpp  Operators.h  Token.cpp  Token.h  TokenException.cpp  TokenException.h  Variable.h
src/Utils/src/fann/: fann.c  fann.h  fann_cascade.h  fann_data.h  fann_internal.h  fann_train.c  fann_train.h  fann_train_data.c
(+1073 files in other folders)
